--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* FORMATAÇÃO DO SOBRE NÓS */
 .content {
     display: flex;
     align-items: center;
@@ -16,3 +17,40 @@
     margin-left: 20px;
     max-width: 50%;
   }
+  /* FIM DA FORMATAÇÃO DO SOBRE NÓS */
+
+  /* FORMATAÇÃO DETALHES CARRO */
+  .square {
+    margin: 10px;
+    background-color: #fefbfb;
+    width: 1450px;
+    height: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    /* Garante que a forma quadrada fique atrás da imagem */
+}
+
+.text-container {
+    position: absolute;
+    top: 57%;
+    left: 60%;
+    /* Ajuste a distância da borda direita conforme necessário */
+    transform: translateY(-50%);
+    color: black;
+    /* Altere a cor do texto conforme necessário */
+}
+
+/* FIM DA FORMATAÇÃO DETALHES CARRO */
+
+#preloader{
+
+    background: white url(img/teste.gif) no-repeat center center;
+    background-size: 30%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
